# flowdan-app

./: .gitignore  LICENSE  README.md  ai-overlay.html  index.html  package-lock.json  package.json  screenshot-settings.ps1  screenshot.ps1  screenshot2.ps1  screenshot3.ps1  tailwind.config.js  tsconfig.json  vite.config.ts  webpack.main.config.ts  webpack.renderer.config.ts
.claude/: settings.local.json
flowdan-tauri/: .gitignore  README.md  overlay.html  tailwind.config.ts  vite.config.ts  widget.html
flowdan-tauri/src/: overlay.tsx  widget.tsx
flowdan-tauri/src-tauri/: Cargo.toml  tauri.conf.json
flowdan-tauri/src-tauri/capabilities/: default.json
flowdan-tauri/src-tauri/src/: errors.rs  lib.rs  main.rs  state.rs
flowdan-tauri/src-tauri/src/ai/: mod.rs  prompts.rs
flowdan-tauri/src-tauri/src/audio/: loopback.rs  mod.rs
flowdan-tauri/src-tauri/src/commands/: ai_cmd.rs  audio_cmd.rs  dictionary_cmd.rs  mod.rs  settings_cmd.rs  window_cmd.rs
flowdan-tauri/src-tauri/src/db/: dictionary_repo.rs  mod.rs  models.rs
flowdan-tauri/src-tauri/src/services/: hotkey.rs  mod.rs  text_injection.rs
flowdan-tauri/src/types/: index.ts  (+1 more)
scripts/: copy-native-modules.js  generate-ico.js
src/: ai-overlay.tsx  main.tsx
src-tauri/: tauri.conf.json
src-tauri/src/: lib.rs  state.rs
src/hooks/: useDictionary.ts  useHistory.ts  useRecordingState.ts
src/main/: index.ts
src/preload/: dashboard.ts  dictionary.ts  history.ts  overlay.ts  settings.ts  widget.ts
src/renderer/: globals.css
src/styles/: glassmorphism.css
src/types/: index.ts  sql.js.d.ts  tauri.ts
(+84 files in other folders)
