[package]
name = "flowdan"
version = "2.0.0"
description = "FlowDan - Voice Dictation Desktop App"
authors = ["Daniel Rolley"]
edition = "2021"

[lib]
name = "flowdan_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
cpal = "0.15"
hound = "3.5"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_System_Com",
] }
enigo = "0.2"
uuid = { version = "1", features = ["v4"] }
regex = "1"
thiserror = "2"
anyhow = "1"
log = "0.4"
env_logger = "0.11"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
